# sswd-evoepi

./: .gitignore  AUDIT-PLAN.md  AUDIT_2026-03-14.md  CODE_ERRATA.md  OVERWATER_TEST_SUMMARY.md  README.md  RESEARCH_GAPS.md  VECTORIZATION_SUMMARY.md  compare_distances.py  compute_overwater_distances.py  create_site_map.py  debug_assignment.py  debug_assignment_fix.py  debug_hang.py  debug_overwater.py  debug_settlement.py  debug_settlement_detailed.py  generate_w145_w154_report.py  merge_sites.py  minimal_test.py  pyproject.toml  quick_test.py  requirements.txt  run_debug.py  run_epidemic_20yr.py  run_local_diagnostic.sh  run_morris.sh  simple_profile.prof  simple_test.py  spawning_profile.prof  timing_test.py
audit/: numba_optimization.md
blog/: autoresearch-for-ecology.md
configs/: default.yaml
conservation/: README.md  REVIEW.md
experiments/: K_cv_literature_review.md  README.md  analyze_reintroduction.py  calibration_runner.py  disease_removal_experiment.py  gen_w329_w340.py  generate_W289_W308.py  k_cv_sweep.sh  launch_w329_w340.sh  reintroduction_monterey.py  run_k1000_sweep.sh
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  references.bib  work-report.blg  work-report.out
reports/: REPORT_TEMPLATE.md
results/: overnight_summary.md  phase1_changes.md  phase7_status.md  site_map_interactive.html
scenarios/: large_program.yaml
scripts/: analyze_k_sensitivity.py  assign_regions.py  benchmark_numba.py  benchmark_vectorized.py  cdt_timing_analysis.py  compare_distance_methods.py  compute_enclosedness.py  diagnose_spawning_simple.py  (+37 more)
(+1045 files in other folders)
