[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sswd-evoepi"
version = "0.1.0"
description = "SSWD-EvoEpi: Coupled eco-evolutionary model of sea star wasting disease"
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.11"
authors = [
    {name = "Anton 🔬 & Willem Weertman", email = "antonstar@fastmail.com"},
]

dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "hypothesis",
]
full = [
    "numba>=0.59",
    "xarray>=2024.0",
    "h5py>=3.10",
    "matplotlib",
    "cartopy",
    "SALib>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["sswd_evoepi*"]
